--- a/tipotestseguridad.html
+++ b/tipotestseguridad.html
@@ -88,7 +88,7 @@
                 <div class="options">
                     <label class="option"><input type="radio" name="q1" value="a"> Confidencialidad</label><br>
                     <label class="option"><input type="radio" name="q1" value="b"> Integridad</label><br>
-                    <label class="option"><input type="radio" name="q1" value="c"> Disponibilidad</label><br>
+                    <label class="option"><input type="radio" name="q1" value="c"> Dbsponibilidad</label><br>
                     <label class="option"><input type="radio" name="q1" value="d"> Rentabilidad</label>
                 </div>
                 <div class="correct" style="display: none;">Respuesta correcta: d) Rentabilidad</div>
